fixed name overflow

--- a/src/components/sidebar/chats/chatcard.css
+++ b/src/components/sidebar/chats/chatcard.css
@@ -24,6 +24,11 @@
 
 .name{
     font-weight: bold;
+    width: 7rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    text-align: start;
 }
 
 .name-message{
